->Changed Uniformity::divides in include/UniformityUtilityOperators.h to only divide the third element of a tuple; this fixes a bug where the normalized trapezoidal maps X & Y axis were also modified (in addition to the z-axis values)

Update: June 23rd 2016
==================================================
->Tweaking Uniformity::VisualizeUniformity::storeCanvasHisto2D() such that the produced trapezoidal map defaults to "top view"
->However TCanvas::SetTheta() and TCanvas::SetPhi() don't seem to be working correctly in the code but only in the ROOT environment

Update: June 22nd 2016
==================================================
->Added method Uniformity::VisualizeUniformity::save2png() for saving produced TCanvas objects to *.png files
->Added new data member Uniformity::RunSetup::bVisPlots_AutoSaving for user to toggle call to VisualizeUniformity::save2png() on/off
->Updated Uniformity::ParameterLoaderRun::loadRunParameters() to search for field Visualize_AutoSaveImages to set RunSetup::bVisPlots_AutoSaving with
->Updated config/configRun.cfg, config/configRun_Template_Rerun.cfg, and config/configRun_Template_Series.cfg to have the Visualize_AutoSaveImages present

Update: June 21st 2016
==================================================
->Changed Uniformity::VisualizeUniformity::storeCanvasGraph2D from 3 arguments to 4 arguments; last argument is a boolean which allows user to choose to normalize the output (normalization to average of the obserable)
->Added templated operator: template<typename T1, typename T2, typename T3>std::tuple<T1, T2, T3> operator+ to include/UniformityUtilityOperators.h
->Added BinaryOperation Uniformity::addTuple which makes use of new tuple addition operator and can be used by stl algorithms (e.g. std::accumulate) in include/UniformityUtilityFunctions.h (implemented in src//UniformityUtilityFunctions.cpp )
->Added UnaryPredicate Uniformity::divides for tuple scalar division to include/UniformityUtilityOperators.h